<resources>
    <string name="app_name">Snapcrack</string>
    <string name="tfe_od_camera_error" >This device doesn\'t support Camera2 API.</string>

    <string name="please_login">Please Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="capture_image">Capture Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="image_capture_speed">Image Capture Speed (in seconds)</string>
    <string name="save">Save</string>
    <string name="stop_capture">STOP CAPTURE</string>
</resources>
